# telegram-send

./: pyproject.toml
telegram_send/: SendBoy.session  main.py
tests/: test_telegram_send.py
