[tool.poetry]
name = "telegram-send"
version = "0.1.0"
description = ""
authors = ["Bietola <dincio.montesi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
